--- a/index.html
+++ b/index.html
@@ -4,11 +4,65 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./pages/index.css">
   <title>Третий блок</title>
 </head>
 
 <body>
-  
+  <div class="page">
+    <div class="section-title">Ремонт техники различных брендов</div>
+    <div class="brands-container">
+      <ul class="brands-container__list">
+        <li class="brands-container__element">
+          <img src="./images/lenovo.png" alt="Линево" class="brands-container__image">
+          <img src="./images/go.svg" alt="Иконка вперед" class="brands-container__go">
+        </li>
+        <li class="brands-container__element">
+          <img src="./images/samsung.png" alt="Самсунг" class="brands-container__image">
+          <img src="./images/go.svg" alt="Иконка вперед" class="brands-container__go">
+        </li>
+        <li class="brands-container__element">
+          <img src="./images/apple.png" alt="Эппл" class="brands-container__image">
+          <img src="./images/go.svg" alt="Иконка вперед" class="brands-container__go">
+        </li>
+        <li class="brands-container__element">
+          <img src="./images/viewsonic.png" alt="Вьюсоник" class="brands-container__image">
+          <img src="./images/go.svg" alt="Иконка вперед" class="brands-container__go">
+        </li>
+        <li class="brands-container__element">
+          <img src="./images/bosch.png" alt="Бош" class="brands-container__image">
+          <img src="./images/go.svg" alt="Иконка вперед" class="brands-container__go">
+        </li>
+        <li class="brands-container__element">
+          <img src="./images/hp.png" alt="Эйчпи" class="brands-container__image">
+          <img src="./images/go.svg" alt="Иконка вперед" class="brands-container__go">
+        </li>
+        <li class="brands-container__element">
+          <img src="./images/acer.png" alt="Эйсер" class="brands-container__image">
+          <img src="./images/go.svg" alt="Иконка вперед" class="brands-container__go">
+        </li>
+        <li class="brands-container__element">
+          <img src="./images/sony.png" alt="Сони" class="brands-container__image">
+          <img src="./images/go.svg" alt="Иконка вперед" class="brands-container__go">
+        </li>
+        <li class="brands-container__element">
+          <img src="./images/lenovo.png" alt="Линево" class="brands-container__image">
+          <img src="./images/go.svg" alt="Иконка вперед" class="brands-container__go">
+        </li>
+        <li class="brands-container__element">
+          <img src="./images/samsung.png" alt="Самсунг" class="brands-container__image">
+          <img src="./images/go.svg" alt="Иконка вперед" class="brands-container__go">
+        </li>
+        <li class="brands-container__element">
+          <img src="./images/apple.png" alt="Эппл" class="brands-container__image">
+          <img src="./images/go.svg" alt="Иконка вперед" class="brands-container__go">
+        </li>
+      </ul>
+      <div class="read-more">
+        Скрыть
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
